<resources>
    <string name="app_name">Waqt</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="about_app">Waqt is a modern, elegant, and free auto silent prayer app. Waqt is an Android app that provides comprehensive Islamic prayer times and automatic features to enhance your prayer experience. You can read duas and Quran directly from the app offline.\n\nKey Features:\n– 6 Elegant Modern Themes\n– Auto Silent Mode\n– Quran and Dua Series\n– Qibla Compass\n– Auto Theme Change\n– Auto World Wide Location Tracker\n– Daily Salah Times (Start–End)\n– Smart Notification\n– Waqt Widget\n– No Ads\n\nShare and recommend this app to your friends and family.\n\nMay Allah bless all of us in this world and the hereafter, Ameen.\n\nWaqt © 2023–2024, Heapiphy. All rights reserved.</string>
    <string name="about_us">We are a team of fanatic people who create high-quality software solutions for your business. Our team comes with some passionate software developers, designers, and content marketers. \n\nHeapiphy is a customer-focused software company. We have our own products like Waqt App, and at the same time, we build software according to your business demand. We take and complete your project with full responsibility. \n\nOur team focuses on creating products that add value, bring solutions that solve your business problems, and increase your business revenue.\n\nFor more information, please visit our website heapiphy.com</string>
    <string name="sadaqah">Rasulullah (ﷺ) Said: He who called (people) to Righteousness, there would be rewards (assured) for him like the rewards of those who adhered to it, without their rewards being diminished in any respect. [Sahih Muslim: 2674]\n\nWe have plans for many more useful Islamic apps and websites. So if you want all these projects to continue and reach millions of brothers and sisters with the message of Islam, then support us as much as possible every month or once.\n\nNOTE : Please be aware that we do not accept Jakah. You can support us by giving Hadiyah (Gift).\n\nTo support us, and if you are in Bangladesh, kindly send your hadiyah to the provided contact information. But if you are from another country, kindly contact us via email heapiphy@gmail.com. </string>
    <string name="waqt">Waqt</string>
    <string name="heapiphy">HEAPIPHY</string>
    <string name="from_nheapiphy">From \nHeapiphy</string>
    <string name="about_app_info">About App</string>
    <string name="give_feedback">Give Feedback</string>
    <string name="about_us_info">About Us</string>
    <string name="sadaqah_info">Sadaqah</string>
    <string name="auto_silent_mode">Auto Silent Mode</string>
    <string name="waqt_needs_permission_to_access_do_not_disturb_settings_would_you_like_to_grant_permission">Waqt needs permission to access Do Not Disturb settings. Would you like to grant permission?</string>
    <string name="serenity_in_your_prayer_intro">Serenity in your prayer</string>
    <string name="location_ex_dhaka">Location Ex: Dhaka</string>
    <string name="search">Search</string>
    <string name="location_updated_refresh_the_app_to_see_the_changes">Location updated. Refresh the app to see the changes.</string>
    <string name="sadaqah_jariyah">Sadaqah Jariyah</string>
    <string name="bikash_personal">Bkash (Personal)</string>
    <string name="_01756964475">01756964475</string>
    <string name="nagad_personal">Nagad (Personal)</string>
    <string name="_01785889470">01785889470</string>
    <string name="dutch_bangla_bank">Dutch Bangla Bank Ltd</string>
    <string name="_7017322426284">7017322426284</string>
    <string name="salah_times">Salah Times</string>
    <string name="fajr">Fajr</string>
    <string name="shurooq">Shurooq</string>
    <string name="dhuhr">Dhuhr</string>
    <string name="asr">Asr</string>
    <string name="maghrib">Maghrib</string>
    <string name="isha">Isha</string>
    <string name="language">Language</string>
    <string name="apply">Apply</string>
    <string name="forbidden_time">Forbidden Time</string>
    <string name="there_are_three_times_when_it_is_generally_forbidden_to_perform_salat_in_islam_these_times_are_known_as_makruh_tahrimi_and_it_is_discouraged_to_offer_prayers_during_these_periods_the_three_forbidden_times_are_n_n1_the_time_of_sunrise_fajr_nthis_is_the_time_period_between_the_pre_dawn_prayer_fajr_and_sunrise_researchers_found_that_it_takes_12_15_minutes_to_disappear_the_yellow_light_after_sunrise_n_n2_the_time_of_zawaal_dhuhr_nthis_is_the_time_when_the_sun_is_at_its_highest_point_in_the_sky_around_midday_it_starts_right_after_the_sun_has_crossed_the_zenith_point_until_it_starts_declining_in_arabic_the_time_is_called_zawaal_according_to_islamic_scholars_6_minutes_before_the_dhuhr_midday_prayer_haram_time_to_pray_salat_n_n3_the_time_of_sunset_maghrib_nwhile_the_sun_starts_to_take_a_yellowish_color_before_sunset_the_time_is_forbidden_for_any_salat_research_finds_that_it_usually_takes_15_minutes_before_maghrib_so_this_15_minutes_is_the_haram_time_for_prayer_n_nhowever_if_anyone_misses_asr_prayer_in_case_he_she_starts_praying_before_sunset_and_the_prayer_continues_while_sunset_the_prayer_will_be_granted">There are three times when it is generally forbidden to perform salat in Islam. These times are known as Makruh Tahrimi, and it is discouraged to offer prayers during these periods. The three forbidden times are:\n\n1. The time of Sunrise (Fajr):\nThis is the time period between the pre-dawn prayer (Fajr) and sunrise. Researchers found that it takes 12-15 minutes to disappear the yellow light after sunrise.\n\n2. The time of Zawaal (Dhuhr):\nThis is the time when the sun is at its highest point in the sky, around midday. It starts right after the sun has crossed the zenith point until it starts declining. In Arabic, the time is called Zawaal. According to Islamic scholars, 6 minutes before the Dhuhr (midday) prayer haram time to pray salat.\n\n3. The time of Sunset (Maghrib):\nWhile the Sun starts to take a yellowish color before sunset, the time is forbidden for any salat. Research finds that it usually takes 15 minutes before Maghrib. So, this 15 minutes is the haram time for prayer.\n\nHowever, if anyone misses Asr prayer, in case he/she starts praying before sunset and the prayer continues while sunset, the prayer will be granted.</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="app_widget_description">This is an app widget description</string>
    <string name="tutorial">Tutorial</string>
    <string name="connect">Connect</string>
    <string name="waqt_now">waqt now</string>
    <string name="waqt_next">waqt next</string>
    <string name="updating_location_this_may_take_a_moment">Updating location. This may take a moment…</string>
    <string name="location_updated">Location updated!</string>
    <string name="refresh_the_app_to_see_the_changes">Refresh the app to see the changes.</string>
    <string name="refresh">Refresh</string>
    <string name="deny">Deny</string>
    <string name="grant">Grant</string>
    <string name="start">Start</string>
    <string name="end">End</string>
    <string name="md_sajedul_islam">Sajedul Islam</string>
    <string name="one_repeats_just_as_the_muadhdhin_says_except_when_he_says">One repeats just as the muadhdhin says, except when he says,</string>
    <string name="adhan_1">Adhan #1</string>
    <string name="hearing_the_adhan">Hearing The Adhan</string>
    <string name="hayya_alas_salaah_wa_hayya_alal_falaah">Transliteration: Hayya \'alas-Salaah wa Hayya \'alal-Falaah.</string>
    <string name="hasten_to_the_prayer_hasten_to_success">Translation: Hasten to the prayer, Hasten to Success.</string>
    <string name="instead_one_should_say">Instead, one should say,</string>
    <string name="laa_hawla_wa_laa_quwwata_illaa_billaah">Transliteration: Laa hawla wa laa quwwata \'illaa billaah.</string>
    <string name="there_is_no_might_and_no_power_except_by_allah_1">Translation: There is no might and no power except by Allah.[1]</string>
    <string name="after_uttering_mu_adhdhin_tashahhud_i_e_ashhadu_anna_muhammadar_the_listeners_will_say">After uttering Mu\'adhdhin Tashahhud (i.e. Ashhadu Anna Muhammadar …) the listeners will say,</string>
    <string name="after_salam">After Salam</string>
    <string name="salah_11_5">Salah #11.5</string>
    <string name="_33_times_subhanallah">Say 33 times Subhanallah,</string>
    <string name="transliteration_subhaanallah">Transliteration: SubhaanAllah.</string>
    <string name="translation_how_perfect_allah_is">Translation: How perfect Allah is.</string>
    <string name="_33_times_alhamdulillah">Say 33 times Alhamdulillah,</string>
    <string name="transliteration_alhamdu_lillaah">Transliteration: Alhamdu lillaah.</string>
    <string name="translation_all_praise_is_for_allah">Translation: All praise is for Allah.</string>
    <string name="_34_times_allahu_akbar">Say 34 times Allahu Akbar,</string>
    <string name="transliteration_allahu_akbar">Transliteration: Allahu \'Akbar.</string>
    <string name="translation_allah_is_the_greatest">Translation: Allah is the greatest.</string>
    <string name="_33_times_subhanallah_33_times_alhamdulillah_and_34_times_allahu_akbar_these_have_been_mentioned_in_different_numbers_in_different_sahih_hadiths_the_number_above_is_more_famous_maximum_number_400_times_subhanallah_alhamdulillah_allahu_akbar_and_la_ilaha_illallah_do_100_dhikr_every_time_minimum_number_30_times_10_times_subhanallah_10_times_alhamdulillah_and_10_times_allahu_akbar_1">33 times Subhanallah, 33 times Alhamdulillah and 34 times Allahu Akbar. These have been mentioned in different numbers in different sahih hadiths. The number above is more famous. Maximum number 400 times; Subhanallah, Alhamdulillah, Allahu Akbar and La-ilaha illallah; do 100 dhikr every time. Minimum number 30 times; 10 times Subhanallah, 10 times Alhamdulillah and 10 times Allahu Akbar.[1]</string>
    <string name="_1_bukhari_843">[1] Sahih Bukhari, 843</string>
    <string name="say_thirty_three_times_each">Say 33 times each,</string>
    <string name="transliteration_subhaanallahi_walhamdu_lillaahi_wallahu_akbar">Transliteration: SubhaanAllahi, walhamdu lillaahi wAllahu \'Akbar.</string>
    <string name="translation_how_perfect_allah_is_all_praise_is_for_allah_and_allah_is_the_greatest">Translation: How perfect Allah is, all praise is for Allah, and Allah is the greatest.</string>
    <string name="and_then_say">Then say,</string>
    <string name="transliteration_laa_ilaaha_illallahu_wahdahu_laa_shareeka_lahu_lahul_mulku_walahul_hamdu_wahuwa_alaa_kulli_shay_in_qadeer">Transliteration: Laa \'ilaaha \'illAllahu wahdahu laa shareeka lahu, lahul-mulku walahul-hamdu wahuwa \'alaa kulli shay\'in Qadeer.</string>
    <string name="translation_none_has_the_right_to_be_worshipped_except_allah_alone_without_any_partner_to_him_belong_all_sovereignty_and_praise_and_he_is_over_all_things_omnipotent">Translation: None has the right to be worshipped except Allah, alone, without any partner, to Him belong all sovereignty and praise and He is over all things omnipotent.</string>
    <string name="whoever_says_these_after_every_prayer_will_be_forgiven_his_sins_even_though_they_be_as_the_foam_of_the_sea_2">Whoever says these after every prayer will be forgiven his sins even though they be as the foam of the sea.[2]</string>
    <string name="muslim_1_418_no_597">[2] Sahih Muslim, 1/418, 597</string>
    <string name="notificaiton">Notificaiton</string>
    <string name="ON">ON</string>
    <string name="OFF">OFF</string>
</resources>