<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="300dp"
    android:layout_gravity="center"
    android:layout_height="wrap_content"
    app:cardBackgroundColor="@color/black"
    app:cardCornerRadius="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            android:id="@+id/dialog_refresh_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/hind_siliguri_regular"
            android:text="@string/location_updated"
            android:textColor="#FFFFFF"
            android:textSize="16sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/dialog_refresh_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/kalpurush"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:text="@string/refresh_the_app_to_see_the_changes"
            android:textColor="#B9B9B9"
            android:textSize="14sp" />

        <!-- Buttons -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_gravity="center">

            <Button
                android:id="@+id/btnRefresh"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/refresh"
                android:fontFamily="@font/hind_siliguri_regular"
                android:backgroundTint="#595959"
                android:textColor="#FFFFFF"
                />

        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>
